[gd_scene load_steps=22 format=3 uid="uid://cvyvi7tv75f8t"]

[ext_resource type="PackedScene" uid="uid://54q6c8oc6k81" path="res://Overlap/Vunerable.tscn" id="1"]
[ext_resource type="PackedScene" path="res://Overlap/SoftCollision.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Classes/Stats.tscn" id="3"]
[ext_resource type="Script" path="res://Entities/Enemies/Bat.gd" id="4"]
[ext_resource type="PackedScene" path="res://Overlap/PlayerDetectionZone.tscn" id="5"]
[ext_resource type="PackedScene" path="res://Entities/WanderController.tscn" id="6"]
[ext_resource type="Material" path="res://Entities/state_material.tres" id="7"]
[ext_resource type="PackedScene" path="res://Overlap/Damage.tscn" id="8"]

[sub_resource type="Animation" id="8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedComponents/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedComponents/Body/RightWingPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedComponents/Body/LeftWingPivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="1"]
resource_name = "flap"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedComponents/Body/LeftWingPivot:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 30), Vector3(0, 0, 0), Vector3(0, 0, -60), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedComponents/Body/RightWingPivot:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -30), Vector3(0, 0, 0), Vector3(0, 0, 60), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedComponents/Body:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.6, 0), Vector3(0, 1, 0), Vector3(0, 1.4, 0), Vector3(0, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ctwa"]
_data = {
"RESET": SubResource("8"),
"flap": SubResource("1")
}

[sub_resource type="BoxMesh" id="2"]
size = Vector3(0.75, 0.1, 1)

[sub_resource type="PrismMesh" id="9"]
size = Vector3(0.4, 0.2, 0.3)

[sub_resource type="SphereShape3D" id="10"]
radius = 0.2

[sub_resource type="CapsuleShape3D" id="5"]
height = 1.4

[sub_resource type="CapsuleShape3D" id="3"]
radius = 4.0
height = 8.0

[sub_resource type="CylinderShape3D" id="4"]
radius = 0.8

[sub_resource type="Animation" id="6"]
resource_name = "start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedComponents/Body/LeftWingPivot/WingMesh:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.201),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.960784, 0.917647, 0.576471, 1), Color(0.101961, 0.0235294, 0.270588, 1), Color(1, 1, 1, 1), Color(0.960784, 0.917647, 0.576471, 1)]
}

[sub_resource type="Animation" id="7"]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedComponents/Body/LeftWingPivot/WingMesh:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kp3jv"]
_data = {
"start": SubResource("6"),
"stop": SubResource("7")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4c8ad"]
height = 1.5

[node name="Bat" type="CharacterBody3D"]
collision_layer = 0
script = ExtResource("4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ctwa")
}
autoplay = "flap"

[node name="AnimatedComponents" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.843541, -0.537064, 0, 0.537064, 0.843541, 0, 0.5, -0.33308)

[node name="Body" type="Node3D" parent="AnimatedComponents"]

[node name="RightWingPivot" type="Node3D" parent="AnimatedComponents/Body"]
transform = Transform3D(0.946931, 0.32144, 0, -0.32144, 0.946931, 0, 0, 0, 1, 0, 0, 0)

[node name="WingMesh" type="MeshInstance3D" parent="AnimatedComponents/Body/RightWingPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.45, 0, 0)
mesh = SubResource("2")
surface_material_override/0 = ExtResource("7")

[node name="LeftWingPivot" type="Node3D" parent="AnimatedComponents/Body"]
transform = Transform3D(0.946931, -0.32144, 0, 0.32144, 0.946931, 0, 0, 0, 1, 0, 0, 0)

[node name="WingMesh" type="MeshInstance3D" parent="AnimatedComponents/Body/LeftWingPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.45, 0, 0)
mesh = SubResource("2")
surface_material_override/0 = ExtResource("7")

[node name="HeadMesh" type="MeshInstance3D" parent="AnimatedComponents/Body"]
transform = Transform3D(1, 0, 0, 0, -0.843542, -0.537064, 0, 0.537064, -0.843542, 0, -0.168639, -0.643161)
mesh = SubResource("9")
surface_material_override/0 = ExtResource("7")

[node name="Damage" parent="AnimatedComponents/Body" instance=ExtResource("8")]
collision_layer = 0
collision_mask = 4
damage = 2.0

[node name="CollisionShape3D" parent="AnimatedComponents/Body/Damage" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, -0.65)
shape = SubResource("10")

[node name="Vunerable" parent="AnimatedComponents/Body" instance=ExtResource("1")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.843542, 0.537064, 0, -0.537064, 0.843542, 0, -0.242885, 0.549499)
collision_layer = 16

[node name="CollisionShape3D" parent="AnimatedComponents/Body/Vunerable" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.540578, 0.841294, 0, -0.841294, 0.540578, 0, 0.553485, -0.425545)
shape = SubResource("5")

[node name="WanderController" parent="." instance=ExtResource("6")]
wander_min = 6.0
wander_max = 10.0

[node name="PlayerDetectionZone" parent="." instance=ExtResource("5")]

[node name="CollisionShape3D" parent="PlayerDetectionZone" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
shape = SubResource("3")

[node name="SoftCollision" parent="." instance=ExtResource("2")]

[node name="CollisionShape3D" parent="SoftCollision" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("4")

[node name="Stats" parent="." instance=ExtResource("3")]
max_health = 2

[node name="InvunerabilityAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kp3jv")
}

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="WorldCollisions" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_4c8ad")

[connection signal="damage_received" from="AnimatedComponents/Body/Vunerable" to="." method="_on_Vunerable_damage_received"]
[connection signal="invincibility_ended" from="AnimatedComponents/Body/Vunerable" to="." method="_on_Vunerable_invincibility_ended"]
[connection signal="invincibility_started" from="AnimatedComponents/Body/Vunerable" to="." method="_on_Vunerable_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="animation_finished" from="InvunerabilityAnimationPlayer" to="." method="_on_InvunerabilityAnimationPlayer_animation_finished"]

[editable path="AnimatedComponents/Body/Damage"]
[editable path="AnimatedComponents/Body/Vunerable"]
[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
